--- a/archive/pom.xml
+++ b/archive/pom.xml
@@ -21,5 +21,10 @@
       <version>4.12</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+    	<groupId>com.esotericsoftware.yamlbeans</groupId>
+    	<artifactId>yamlbeans</artifactId>
+    	<version>1.08</version>
+    </dependency>
   </dependencies>
 </project>
