--- a/archive/pom.xml
+++ b/archive/pom.xml
@@ -22,9 +22,9 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-    	<groupId>com.esotericsoftware.yamlbeans</groupId>
-    	<artifactId>yamlbeans</artifactId>
-    	<version>1.08</version>
+    	<groupId>org.yaml</groupId>
+    	<artifactId>snakeyaml</artifactId>
+    	<version>1.16</version>
     </dependency>
   </dependencies>
 </project>
