--- a/archive/pom.xml
+++ b/archive/pom.xml
@@ -26,5 +26,10 @@
     	<artifactId>snakeyaml</artifactId>
     	<version>1.16</version>
     </dependency>
+    <dependency>
+    	<groupId>com.google.inject</groupId>
+    	<artifactId>guice</artifactId>
+    	<version>4.0</version>
+    </dependency>
   </dependencies>
 </project>
